# hipsterfy

./: .dockerignore  .gitignore  .hint.yaml  .hlint.yaml  LICENSE  README.md  cabal.project  docker-compose.yml  hie.yaml  hipsterfy.cabal  hipsterfy.err  hipsterfy.out  schema.sql
.github/workflows/: docker-base.yml  docker.yml
app/: Main.hs
cmd/hipsterfy/: Main.hs
cmd/hipsterfy-tools/: Main.hs
cmd/hipsterfy-worker/: Main.hs
cmd/hipsterfy/Hipsterfy/: Pages.hs  Server.hs
cmd/hipsterfy/Hipsterfy/Server/: Handlers.hs  Pages.hs  Session.hs  Trace.hs
cmd/hipsterfy/Hipsterfy/Server/Internal/: OrphanInstances.hs
db/: 0000-schema.sql  0001-created-at.sql  0002-follows.sql  0003-background-workers.sql  0003-simplify-artists.sql  0004-update-user-progress.sql  0005-update-tracking.sql  0006-opaleye.sql  0007-migration-tracking.sql
docs/rfcs/: 0001-background-workers.md
images/hipsterfy/: Dockerfile
images/hipsterfy-base/: Dockerfile
images/hipsterfy-db/: Dockerfile
src/: Hipsterfy.hs
src/Hipsterfy/: Application.hs  Artist.hs  Artist2.hs  Database.hs  Jobs.hs  Middleware.hs  Pages.hs  Server.hs  Session.hs  Spotify.hs  Trace.hs  User.hs  User2.hs  Worker.hs
src/Hipsterfy/Database/: Artist.hs  Jobs.hs  User.hs
src/Hipsterfy/Internal/: OrphanInstances.hs
src/Hipsterfy/Jobs/: UpdateArtist.hs  UpdateUser.hs
src/Hipsterfy/Spotify/: API.hs  Auth.hs  Internal.hs
test/: Main.hs
test/Hipsterfy/Spotify/: Spec.hs
