cabal-version: 3.0
name:          hipsterfy
version:       0.1.0.0
build-type:    Simple

common lang
  build-depends:      base >=4.12 && <4.14
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    DeriveGeneric
    DuplicateRecordFields
    NamedFieldPuns
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library
  import:          lang
  build-depends:
    , aeson              ==1.5.1.0
    , base64             ==0.4.2
    , blaze-html         ==0.9.1.2
    , cookie             ==0.4.5
    , http-types         ==0.12.3
    , lens               ==4.19.2
    , monad-loops        ==0.4.3
    , mtl                ==2.2.2
    , postgresql-simple  ==0.6.2
    , random-strings     ==0.1.1.0
    , relude             ==0.7.0.0
    , scotty             ==0.12
    , scotty-cookie      ==0.1.0.3
    , split              ==0.2.3.4
    , text               ==1.2.4.0
    , time               ==1.9.3
    , wai-extra          ==3.0.29.2
    , warp               ==3.3.11
    , wreq               ==0.5.3.2

  -- cabal-fmt: expand src
  exposed-modules:
    Hipsterfy
    Hipsterfy.Artist
    Hipsterfy.Pages
    Hipsterfy.Session
    Hipsterfy.Spotify
    Hipsterfy.User

  hs-source-dirs:  src

executable hipsterfy
  import:         lang
  build-depends:
    , hipsterfy
    , optparse-applicative  ==0.15.1.0
    , relude                ==0.7.0.0
    , unix                  ==2.7.2.2

  main-is:        Main.hs
  hs-source-dirs: cmd/hipsterfy
  ghc-options:    -threaded -with-rtsopts=-N
