cabal-version: 3.0
name:          hipsterfy
version:       0.1.0.0
build-type:    Simple

common lang
  build-depends:      base >=4.12 && <4.14
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    DeriveGeneric
    DuplicateRecordFields
    NamedFieldPuns
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library
  import:          lang
  build-depends:
    , aeson              ==1.5.1.0
    , async              ==2.2.2
    , base64             ==0.4.2
    , blaze-html         ==0.9.1.2
    , cookie             ==0.4.5
    , faktory            ==1.0.1.2
    , http-types         ==0.12.3
    , lens               ==4.19.2
    , monad-loops        ==0.4.3
    , monad-parallel     ==0.7.2.3
    , mtl                ==2.2.2
    , postgresql-simple  ==0.6.2
    , random-strings     ==0.1.1.0
    , relude             ==0.7.0.0
    , scotty             ==0.12
    , scotty-cookie      ==0.1.0.3
    , split              ==0.2.3.4
    , text               ==1.2.4.0
    , time               ==1.9.3
    , wai-extra          ==3.0.29.2
    , warp               ==3.3.11
    , wreq               ==0.5.3.2

  -- cabal-fmt: expand src
  exposed-modules:
    Hipsterfy.Artist
    Hipsterfy.Jobs.UpdateArtist
    Hipsterfy.Jobs.UpdateUser
    Hipsterfy.Middleware
    Hipsterfy.Pages
    Hipsterfy.Server
    Hipsterfy.Session
    Hipsterfy.Spotify
    Hipsterfy.Spotify.API
    Hipsterfy.Spotify.Auth
    Hipsterfy.Spotify.Internal
    Hipsterfy.User
    Hipsterfy.Worker

  hs-source-dirs:  src

test-suite tests
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , hipsterfy
    , hspec                 ==2.7.1
    , optparse-applicative  ==0.15.1.0
    , relude                ==0.7.0.0

executable hipsterfy
  import:         lang
  build-depends:
    , hipsterfy
    , optparse-applicative  ==0.15.1.0
    , relude                ==0.7.0.0
    , unix                  ==2.7.2.2

  main-is:        Main.hs
  hs-source-dirs: cmd/hipsterfy
  ghc-options:    -threaded -with-rtsopts=-N

executable hipsterfy-worker
  import:         lang
  build-depends:
    , hipsterfy
    , optparse-applicative  ==0.15.1.0
    , relude                ==0.7.0.0
    , unix                  ==2.7.2.2

  main-is:        Main.hs
  hs-source-dirs: cmd/hipsterfy-worker
  ghc-options:    -threaded -with-rtsopts=-N
