cabal-version: 3.0
name:          hipsterfy
version:       0.1.0.0
build-type:    Simple

common lang
  build-depends:      base >=4.12 && <4.14
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    DeriveGeneric
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

  build-depends:
    , containers         ==0.6.2.1
    , faktory            ==1.0.1.2
    , mtl                ==2.2.2
    , postgresql-simple  ==0.6.2
    , relude             ==0.7.0.0

library
  import:          lang
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Hipsterfy.Artist
    Hipsterfy.Jobs
    Hipsterfy.Jobs.UpdateArtist
    Hipsterfy.Jobs.UpdateUser
    Hipsterfy.Spotify
    Hipsterfy.Spotify.API
    Hipsterfy.Spotify.Auth
    Hipsterfy.Spotify.Internal
    Hipsterfy.User

  build-depends:
    , aeson           ==1.5.1.0
    , base64          ==0.4.2
    , http-types      ==0.12.3
    , lens            ==4.19.2
    , monad-parallel  ==0.7.2.3
    , random-strings  ==0.1.1.0
    , time            ==1.9.3
    , vector          ==0.12.1.2
    , wreq            ==0.5.3.2

common exe-deps
  build-depends:
    , hipsterfy
    , optparse-applicative  ==0.15.1.0
    , unix                  ==2.7.2.2

test-suite tests
  import:         lang
  import:         exe-deps
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:  Hipsterfy.Spotify.Spec
  build-depends:  hspec ==2.7.1

executable hipsterfy
  import:         lang
  import:         exe-deps
  ghc-options:    -threaded -with-rtsopts=-N
  hs-source-dirs: cmd/hipsterfy
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/hipsterfy -Main
  other-modules:
    Hipsterfy.Pages
    Hipsterfy.Session

  build-depends:
    , blaze-html      ==0.9.1.2
    , cookie          ==0.4.5
    , random-strings  ==0.1.1.0
    , scotty          ==0.12
    , scotty-cookie   ==0.1.0.3
    , split           ==0.2.3.4
    , time            ==1.9.3
    , wai-extra       ==3.0.29.2
    , warp            ==3.3.11

executable hipsterfy-worker
  import:         lang
  import:         exe-deps
  ghc-options:    -threaded -with-rtsopts=-N
  hs-source-dirs: cmd/hipsterfy-worker
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/hipsterfy-worker -Main
  other-modules:
  build-depends:  async ==2.2.2

executable hipsterfy-tools
  import:         lang
  import:         exe-deps
  ghc-options:    -threaded -with-rtsopts=-N
  hs-source-dirs: cmd/hipsterfy-tools
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/hipsterfy-tools -Main
  other-modules:
  build-depends:
